crates/ty_python_semantic/resources/mdtest/snapshots/no_matching_overload…_-_No_matching_overload…_-_An_explicit_`__get__…_(9ecd21d0927ee1ff).snap
---
source: crates/mdtest/src/lib.rs
expression: snapshot
---

---
mdtest name: no_matching_overload.md - No matching overload diagnostics - An explicit `__get__` call on an overloaded function
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/no_matching_overload.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing import overload
 2 | 
 3 | @overload
 4 | def f(x: int) -> int: ...
 5 | @overload
 6 | def f(x: str) -> str: ...
 7 | @overload
 8 | def f(x: bytes) -> bytes: ...
 9 | def f(x: int | str | bytes) -> int | str | bytes:
10 |     return x
11 | 
12 | f.__get__()  # error: [no-matching-overload]
```

# Diagnostics

```
error[no-matching-overload]: No overload of method wrapper `__get__` of function `f` matches arguments
  --> src/mdtest_snippet.py:12:1
   |
12 | f.__get__()  # error: [no-matching-overload]
   | ^^^^^^^^^^^
info: First overload defined here
 --> src/mdtest_snippet.py:3:1
  |
3 | / @overload
4 | | def f(x: int) -> int: ...
  | |_________________________^ First overload defined here
info: Possible overloads for method wrapper `__get__` of function `f`:
info:   (x: int) -> int
info:   (x: str) -> str
info:   (x: bytes) -> bytes
info: Overload implementation defined here
 --> src/mdtest_snippet.py:9:5
  |
9 | def f(x: int | str | bytes) -> int | str | bytes:
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

```
